[package]
name = "bitcoin-rpc-types"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nervana21/bitcoin-rpc-types"
description = "Type definitions for Bitcoin Core's JSON-RPC interface"
keywords = ["bitcoin", "rpc", "types", "codegen", "fuzzing"]
categories = ["cryptography", "data-structures", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/bitcoin-rpc-types"

[dependencies]
bitcoin = { version = "0.32.7", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
